--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -2,18 +2,15 @@
 ; by enclosing the key with % (like %database_user%)
 ; Comments start with ';', as in php.ini
 [parameters]
-    database_driver   = pdo_mysql
-    database_host     = localhost
-    database_port     =
-    database_name     = symfony
-    database_user     = root
-    database_password =
-
-    mailer_transport  = smtp
-    mailer_host       = localhost
-    mailer_user       =
-    mailer_password   =
-
-    locale            = en
-
-    secret            = ThisTokenIsNotSoSecretChangeIt
+    database_driver="pdo_mysql"
+    database_host="localhost"
+    database_port=""
+    database_name="PRESTA_RD_askeet_sf2_jhx"
+    database_user="presta_rd"
+    database_password="rd"
+    mailer_transport="smtp"
+    mailer_host="localhost"
+    mailer_user=""
+    mailer_password=""
+    locale="en"
+    secret="de85d364723f209d5c1d5d4754432be07dbfac99"
