creation du bundle prestaAskeet

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -3,7 +3,7 @@
 ; Comments start with ';', as in php.ini
 [parameters]
     database_driver="pdo_mysql"
-    database_host="localhost"
+    database_host="192.168.1.233"
     database_port=""
     database_name="PRESTA_RD_askeet_sf2_jhx"
     database_user="presta_rd"
