--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ framework:
     session:
         default_locale: %locale%
         auto_start:     true
+    validation: { enable_annotations: true }
 
 # Twig Configuration
 twig:
