--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,19 @@
-PrestaAskeetBundle:
-    resource: "@PrestaAskeetBundle/Resources/config/routing.yml"
-    prefix:   /
+homepage:
+  pattern:  /
+  defaults: { _controller: PrestaAskeetBundle:Question:index }
+  
+login:
+  pattern:   /login
+  defaults:  { _controller: PrestaAskeetBundle:User:login }
+login_check:
+  pattern:   /question/login_check
+logout:
+  pattern:   /logout
 
+PrestaAskeetBundle:
+  resource: "@PrestaAskeetBundle/Resources/config/routing.yml"
+  prefix:   /
+    
 # Internal routing configuration to handle ESI
 #_internal:
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
