--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -1,3 +1,3 @@
-_welcome:
-    pattern:  /
-    defaults: { _controller: PrestaAskeetBundle:Question:index }
+routingProd:
+    resource: "routing.yml"
+    prefix:   /
